--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@jsplumb/browser-ui": "^5.11.3",
+    "element-plus": "^2.2.15",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
